# robocode

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  README.md  config.json  install.sh  pyproject.toml  run_autoformat.sh  run_ci_checks.sh
.github/workflows/: ci.yml
analysis/cdl_mp_clutteredstorage2d_medium_04-01/s42/: outputs:cdl_mp_clutteredstorage2d_medium_04-01:s42:detailed-version-summary.md  results.json
analysis/cdl_mp_clutteredstorage2d_medium_04-09/: multirun.yaml
analysis/cdl_mp_clutteredstorage2d_medium_04-09/s24/: env_description.md  outputs:cdl_mp_clutteredstorage2d_medium_04-09:s24:detailed-version-summary.md
analysis/cdl_mp_clutteredstorage2d_medium_04-09/s42/: env_config.json  outputs:cdl_mp_clutteredstorage2d_medium_04-09:s42:detailed-version-summary.md  results.json
analysis/cdl_mp_clutteredstorage2d_medium_04-09/s444/: results.json
analysis/cdl_mp_obstruction2d_hard_04-08/: multirun.yaml
analysis/cdl_mp_obstruction2d_hard_04-08/s24/: env_config.json  outputs:cdl_mp_obstruction2d_hard_04-08:s24
analysis/cdl_mp_obstruction2d_hard_04-08/s42/: outputs:cdl_mp_obstruction2d_hard_04-08:s42.md  results.json
analysis/cdl_mp_obstruction2d_hard_04-08/s444/: env_description.md  outputs:cdl_mp_obstruction2d_hard_04-08:s444  results.json
analysis/cdl_mp_stickbutton2d_hard_04-08/s24/: cdl_mp_stickbutton2d_hard_04-08s24 (1.00).md  env_config.json  env_description.md  results.json
analysis/cdl_no_mp_obstruction2d_hard_04-07/: multirun.yaml
analysis/cdl_no_mp_obstruction2d_hard_04-07/s24/: cdl_no_mp_obstruction2d_hard_04-07s24 (0.84).84).84)  results.json
analysis/cdl_no_mp_obstruction2d_hard_04-07/s42/: results.json  stream.jsonl
analysis/cdl_no_mp_obstruction2d_hard_04-07/s444/: results.json  stream.jsonl
docker/: Dockerfile  build.sh  build_sif.sh  entrypoint.sh  init-firewall.sh
docs/: blackbox.md
experiments/: __init__.py  analyze_results.py  plot_scaling.py  results_viewer.py  run_experiment.py
experiments/conf/: bilevel.yaml  config.yaml  lowlevel.yaml  noprims.yaml
experiments/conf/approach/: agentic.yaml  agentic_cdl.yaml  agentic_per_instance.yaml  best_of_k.yaml  bilevel_planning.yaml  llm_genplan.yaml  multi_session_agentic.yaml  progressive_agentic.yaml  random.yaml  skill_agentic.yaml
experiments/conf/environment/: clutteredretrieval2d_easy.yaml  clutteredretrieval2d_generalized.yaml  clutteredretrieval2d_hard.yaml  clutteredretrieval2d_medium.yaml  clutteredstorage2d_easy.yaml  clutteredstorage2d_generalized.yaml  clutteredstorage2d_hard.yaml  clutteredstorage2d_medium.yaml  constrainedcupboard3d_easy.yaml  large_maze.yaml  motion2d_easy.yaml  motion2d_generalized.yaml  motion2d_hard.yaml  motion2d_medium.yaml  motion2d_p3.yaml  motion2d_p5.yaml  motion3d.yaml  obstruction2d_easy.yaml  obstruction2d_generalized.yaml  (+23 more)
init_states/: init_episode_10.npy  init_episode_11.npy  init_episode_12.npy  init_episode_13.npy  init_episode_14.npy  init_episode_16.npy  init_episode_18.npy  init_episode_19.npy
integration_tests/: bench_blackbox_latency.py  red_team_sandbox.py
scripts/: analysis_history.sh  reproduce_capx_official.sh  run_all2d_all_primitives_25d_a.sh  run_all2d_all_primitives_25d_b.sh  run_all2d_all_primitives_25d_c.sh  run_all2d_mp_multi_sessions.sh  run_all2d_mp_multi_sessions_a.sh  run_all2d_mp_multi_sessions_b.sh  run_all2d_mp_multi_sessions_c.sh  run_all2d_no_primitives_25d_a.sh  run_all2d_no_primitives_25d_b.sh  run_all2d_no_primitives_25d_c.sh  run_all2d_no_primitives_multi_sessions.sh  run_all2d_no_primitives_multi_sessions_a.sh  run_all2d_no_primitives_multi_sessions_b.sh  run_all2d_no_primitives_multi_sessions_c.sh  run_cdl_agent_crv.sh  run_cdl_agent_mp.sh  run_cdl_agent_no_primitives.sh  run_debug.sh  run_easy2d_all_primitives.sh  run_easy2d_all_primitives_25d.sh  run_easy2d_all_primitives_25d_a.sh  run_easy2d_all_primitives_25d_b.sh  run_easy2d_all_primitives_a.sh  run_easy2d_all_primitives_b.sh  run_easy2d_no_primitives.sh  run_easy2d_no_primitives_25d.sh  run_easy2d_no_primitives_25d_a.sh  run_easy2d_no_primitives_25d_b.sh  run_easy2d_no_primitives_a.sh  run_easy2d_no_primitives_a_no_geometry.sh  run_easy2d_no_primitives_b.sh  run_easy2d_no_primitives_b_no_geometry.sh  run_easy2d_no_primitives_parallel.sh  run_missing_evals.sh  run_pushpullhook2d_closer2full.sh  run_pushpullhook2d_closer2full_np.sh  run_pushpullhook2d_grasp_random.sh  run_pushpullhook2d_grasp_random2touch.sh  (+21 more)
src/robocode/: primitive_descriptions.py  primitive_specs.py  prompts.py  sandbox.py  utils.py
tests/: __init__.py  conftest.py  test_primitive_descriptions.py  test_prompts.py  test_results_viewer.py  test_sandbox.py  test_utils.py
tests/approaches/: test_agentic_approach.py  test_agentic_cdl_approach.py  test_agentic_per_instance_approach.py  test_best_of_k_approach.py  test_bilevel_planning_approach.py  test_llm_genplan_approach.py  test_random_approach.py  test_search_approach.py  test_skill_approach.py
tests/benchmarks/: test_maze_benchmark.py
tests/environments/: test_collision_checking.py  test_kinder_geom2d_env.py  test_kinder_geom3d_env.py  test_libero.py  test_maze_env.py  test_variable_object_count_env.py
tests/experiments/: test_plot_scaling.py
tests/mcp/: test_local_render.py  test_server.py
tests/primitives/: test_bilevel_models.py  test_crv_motion_planning.py  test_crv_motion_planning_grasp.py  test_crv_on_variable_count_env.py  test_draw_labeled_points.py  test_render_policy.py  test_render_state.py
tests/rendering/: test_render_policy.py  test_render_state.py
tests/simulators/: test_env_simulator.py
tests/skills/: test_pushpullhook_skills.py
tests/utils/: test_approach_history.py  test_apptainer_sandbox.py  test_backends.py  test_bilevel.py  test_claude_auth.py  test_docker_sandbox.py  test_env_in_sandbox.py  test_env_server.py  test_episode.py  test_episode_variable_count.py  test_genplan_validate.py  test_llm.py  test_mcp_sandbox_config.py  test_object_centric_codec.py  test_ollama_server.py  test_rate_limit.py  test_render_paths.py  test_resume_integration.py  test_sandbox.py
(+797 files in other folders)
