[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "robocode"
version = "0.1.0"
description = "Agents for robot physical reasoning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "gymnasium",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "omegaconf",
   "relational-structs",
   "prpl_utils",
   "tomsgeoms2d",
   "kinder[geom3d]",
   "pybullet_helpers",
   "imageio",
   "claude-agent-sdk",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robocode = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "outputs/*"]

[tool.uv.sources]
relational-structs = { path = "prpl-mono/relational-structs" }
prpl_utils = { path = "prpl-mono/prpl-utils" }
tomsgeoms2d = { path = "prpl-mono/toms-geoms-2d" }
kinder = { path = "prpl-mono/kinder" }
pybullet_helpers = { path = "prpl-mono/pybullet-helpers" }

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "claude_agent_sdk.*",
    "pybullet.*",
    "pybullet_helpers.*",
    "pybullet_utils.*",
]
ignore_missing_imports = true
