[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "robocode"
version = "0.1.0"
description = "Agents for robot physical reasoning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "gymnasium",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "hydra-joblib-launcher",
   "omegaconf",
   "kindergarden[kinematic2d,kinematic3d,dynamic2d,dynamic3d]",
   "pybullet",
   "types-shapely",
   "scipy-stubs",
   "imageio",
   "mcp[cli]",
   "anthropic",
   "openai",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    # pytest 9.1 dropped the deprecated `path` arg from the pytest_collect_file
    # hookspec, which pytest-pylint 0.21.0 (its latest release) still declares,
    # so the --pylint plugin fails to register. Cap until pytest-pylint catches up.
    "pytest>=7.2.2,<9.1",
    "types-PyYAML",
]
libero = [
    "libero",
    "robosuite==1.4.0",
    "bddl==1.0.1",
    "robomimic==0.2.0",
    "gym==0.25.2",
    "mujoco",
    "future",
    "easydict",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robocode = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "outputs/*", "third-party/*"]

[tool.uv.sources]
kindergarden = { path = "third-party/kindergarden", editable = true }
libero = { path = "third-party/LIBERO-PRO", editable = true }

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pybullet.*",
    "pybullet_helpers.*",
    "pybullet_utils.*",
    "libero.*",
    "mujoco.*",
]
ignore_missing_imports = true
